Add icons and refactor with grid

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -10,6 +10,13 @@
   box-shadow: rgba(146, 146, 146, 0.68) 3px 3px 6px;
 }
 
+.app > .boxes {
+  display: grid;
+  grid-template-columns: minmax(max-content, 10px) 1fr;
+  row-gap: 30px;
+  column-gap: 30px;
+}
+
 .app-header {
   margin-bottom: 25px;
   color: rgb(153, 86, 0);
