--- a/src/style/NotesBox.css
+++ b/src/style/NotesBox.css
@@ -23,15 +23,16 @@
   width: 100%;
   height: 100%;
   resize: none;
-  padding: 10px;
+  padding: 14px;
   
   font-family: var(--bear-font);
   font-size: 18px;
   color: var(--bear-text);
-  border-radius: 5px;
+  border-radius: 13px;
   background-color: var(--light-yellow);
   border: none;
   outline: none;
+  box-shadow: inset 1px 1px 2px 0px rgba(138, 87, 0, 0.4);
 }
 
 .notes-box textarea:focus {
