--- a/src/style/CharacterBoxes.css
+++ b/src/style/CharacterBoxes.css
@@ -40,7 +40,9 @@
   display: grid;
   width: 100%;
   grid-template-rows: 1fr 1.5fr;
+  align-items: center;
   justify-items: center;
+  row-gap: 20px;
 }
 
 .skill-box-label {
@@ -49,6 +51,12 @@
   background: var(--light-yellow);
   padding: 10px;
   border-radius: 25px;
+}
+
+.skill-flavour-label {
+  text-align: center;
+  font-style: oblique;
+  color: #c78359;
 }
 
 .species-label {
