--- a/src/style/App.css
+++ b/src/style/App.css
@@ -30,7 +30,7 @@
   text-align: left;
   margin-bottom: 25px;
   color: rgb(153, 86, 0);
-  font-size: 60px;
+  font-size: 6em;
 }
 
 .app-header > .honey {
