--- a/src/style/IntroductionBox.css
+++ b/src/style/IntroductionBox.css
@@ -2,11 +2,11 @@
   width: 100%;
   height: 100%;
   padding: 20px;
-  line-height: 40px;
+  /*line-height: 40px;*/
   grid-column-start: 1;
   grid-column-end: 3;
 
-  font-size: 25px;
+  font-size: 2em;
   border-radius: 5px;
   background: var(--very-light-yellow);
   box-shadow: rgba(190, 124, 11, 0.79) 3px 2px 7px;
@@ -15,3 +15,4 @@
 .introduction-box a {
   color: var(--bear-text);
 }
+
